--- a/swagger-templates/src/main/resources/OktaJavaImpl/api.mustache
+++ b/swagger-templates/src/main/resources/OktaJavaImpl/api.mustache
@@ -18,7 +18,7 @@ package {{package}};
 
 import com.okta.sdk.cache.CacheManager;
 import com.okta.sdk.client.AuthenticationScheme;
-import com.okta.sdk.client.Proxy;
+import com.okta.commons.http.config.Proxy;
 import com.okta.commons.http.QueryString;
 import com.okta.commons.http.HttpHeaders;
 import com.okta.sdk.impl.config.ClientConfiguration;
@@ -46,7 +46,7 @@ import static com.okta.commons.lang.Assert.hasText;
         value = "{{generatorClass}}",
         date  = "{{generatedDate}}")
 @SuppressWarnings("deprecation")
-public class {{classname}} extends com.okta.sdk.impl.client.AbstractClient {
+public class {{classname}} extends com.okta.sdk.impl.client.BaseClient implements com.okta.sdk.client.Client {
 
     /**
     * Instantiates a new Client instance that will communicate with the Okta REST API.  See the class-level
