swagger code gen updates for handling optional body in PUT request

--- a/swagger-templates/src/main/resources/OktaJavaImpl/modelImpl.mustache
+++ b/swagger-templates/src/main/resources/OktaJavaImpl/modelImpl.mustache
@@ -163,7 +163,12 @@ public class Default{{classname}} extends {{#parent}}{{.}}{{/parent}}{{^parent}}
 {{>apiMethodGet}}
 {{/vendorExtensions.isGet}}
 {{#vendorExtensions.isPut}}
-{{>apiMethodPut}}
+    {{#vendorExtensions.optionalBody}}
+        {{>apiMethodPutNoBody}}
+    {{/vendorExtensions.optionalBody}}
+    {{^vendorExtensions.optionalBody}}
+        {{>apiMethodPut}}
+    {{/vendorExtensions.optionalBody}}
 {{/vendorExtensions.isPut}}
 {{#vendorExtensions.isPost}}
     {{#vendorExtensions.optionalBody}}
