--- a/swagger-templates/src/main/resources/OktaJava/modelEnum.mustache
+++ b/swagger-templates/src/main/resources/OktaJava/modelEnum.mustache
@@ -20,8 +20,11 @@
 public enum {{#datatypeWithEnum}}{{{.}}}{{/datatypeWithEnum}}{{^datatypeWithEnum}}{{{classname}}}{{/datatypeWithEnum}} {
 
   {{#allowableValues}}{{#enumVars}}
-  {{{name}}}({{{value}}}){{^-last}},
-  {{/-last}}{{#-last}};{{/-last}}{{/enumVars}}{{/allowableValues}}
+  {{{name}}}({{{value}}}),
+  {{/enumVars}}
+
+  SDK_UNKNOWN("SDK_UNKNOWN");
+  {{/allowableValues}}
 
   private {{{dataType}}} value;
 
