--- a/swagger-templates/src/main/resources/OktaJava/modelListResourceInterface.mustache
+++ b/swagger-templates/src/main/resources/OktaJava/modelListResourceInterface.mustache
@@ -19,5 +19,5 @@ import com.okta.sdk.resource.CollectionResource;
 /**
 * {{#description}}{{.}}{{/description}}{{^description}}{{classname}}{{/description}}
 */
-{{>generatedAnnotation}}{{#discriminator}}{{>typeInfoAnnotation}}{{/discriminator}}
+{{>generatedAnnotation}}
 public interface {{classname}} extends CollectionResource<{{vendorExtensions.baseType}}> {}
