--- a/swagger-templates/src/main/resources/OktaJavaImpl/api.mustache
+++ b/swagger-templates/src/main/resources/OktaJavaImpl/api.mustache
@@ -16,6 +16,7 @@
 {{>licenseInfo}}
 package {{package}};
 
+import com.okta.commons.http.RequestExecutor;
 import com.okta.sdk.cache.CacheManager;
 import com.okta.sdk.client.AuthenticationScheme;
 import com.okta.commons.http.config.Proxy;
@@ -57,6 +58,18 @@ public class {{classname}} extends com.okta.sdk.impl.client.BaseClient implement
     */
     public {{classname}}(ClientConfiguration clientConfiguration, CacheManager cacheManager) {
         super(clientConfiguration, cacheManager);
+    }
+
+    /**
+    * Instantiates a new Client instance that will communicate with the Okta REST API.  See the class-level
+    * JavaDoc for a usage example.
+    *
+    * @param clientConfiguration  the {@link ClientConfiguration} containing the connection information
+    * @param cacheManager         the {@link CacheManager} that should be used to cache
+    * @param requestExecutor      the {@link RequestExecutor} that should be used to execute requests
+    */
+    public {{classname}}(ClientConfiguration clientConfiguration, CacheManager cacheManager, RequestExecutor requestExecutor) {
+        super(clientConfiguration, cacheManager, requestExecutor);
     }
 
 {{#operation}}{{^vendorExtensions.moved}}
