--- a/swagger-templates/src/main/resources/OktaJava/modelInnerEnum.mustache
+++ b/swagger-templates/src/main/resources/OktaJava/modelInnerEnum.mustache
@@ -21,16 +21,16 @@
             {{#allowableValues}}
                 {{#enumVars}}
         @SerializedName({{#isInteger}}"{{/isInteger}}{{#isDouble}}"{{/isDouble}}{{#isLong}}"{{/isLong}}{{#isFloat}}"{{/isFloat}}{{{value}}}{{#isInteger}}"{{/isInteger}}{{#isDouble}}"{{/isDouble}}{{#isLong}}"{{/isLong}}{{#isFloat}}"{{/isFloat}})
-        {{{name}}}({{{value}}}){{^-last}},
-        {{/-last}}{{#-last}};{{/-last}}
+        {{{name}}}({{{value}}}){{^@last}},
+        {{/@last}}{{#@last}};{{/@last}}
                 {{/enumVars}}
             {{/allowableValues}}
         {{/gson}}
         {{^gson}}
             {{#allowableValues}}
                 {{#enumVars}}
-        {{{name}}}({{{value}}}){{^-last}},
-        {{/-last}}{{#-last}};{{/-last}}
+        {{{name}}}({{{value}}}){{^@last}},
+        {{/@last}}{{#@last}};{{/@last}}
                 {{/enumVars}}
             {{/allowableValues}}
         {{/gson}}
