--- a/swagger-templates/src/main/resources/OktaJava/api.mustache
+++ b/swagger-templates/src/main/resources/OktaJava/api.mustache
@@ -18,6 +18,8 @@ package {{package}};
 
 {{#imports}}import {{import}};
 {{/imports}}
+import com.okta.sdk.resource.template.SmsTemplateType;
+import com.okta.sdk.resource.user.UserNextLogin;
 
 import java.util.LinkedHashMap;
 import java.util.List;
