fix compilation issues for okta-sdk-api module

--- a/swagger-templates/src/main/resources/OktaJava/api.mustache
+++ b/swagger-templates/src/main/resources/OktaJava/api.mustache
@@ -22,6 +22,7 @@ import com.okta.sdk.resource.template.SmsTemplateType;
 import com.okta.sdk.resource.user.UserNextLogin;
 
 import java.util.LinkedHashMap;
+import java.util.List;
 import com.okta.sdk.ds.DataStore;
 
 {{#operations}}
