--- a/swagger-templates/src/main/resources/OktaJavaImpl/api.mustache
+++ b/swagger-templates/src/main/resources/OktaJavaImpl/api.mustache
@@ -24,7 +24,7 @@ import com.okta.commons.http.QueryString;
 import com.okta.commons.http.HttpHeaders;
 import com.okta.sdk.impl.config.ClientConfiguration;
 
-import {{vendorExtensions.overrideApiPackage}}.*;
+//import {{vendorExtensions.overrideApiPackage}}.*;
 
 {{#imports}}import {{import}};
 {{/imports}}
