--- a/swagger-templates/src/main/resources/OktaJavaImpl/api.mustache
+++ b/swagger-templates/src/main/resources/OktaJavaImpl/api.mustache
@@ -87,7 +87,7 @@ public class {{classname}} extends com.okta.sdk.impl.client.BaseClient implement
     @javax.annotation.Generated(
             value    = "{{generatorClass}}",
             date     = "{{generatedDate}}",
-            comments = "{{httpMethod}} - {{path}}")
+            comments = "{{httpMethod}} - {{path}}") /*A*/
     public {{#returnType}}{{{returnType}}} {{/returnType}}{{^returnType}}void {{/returnType}}{{operationId}}({{#allParams}}{{{dataType}}} {{paramName}}{{^@last}}, {{/@last}}{{/allParams}}) {
 {{>paramPartial}}
 {{#vendorExtensions.isGet}}
@@ -102,6 +102,7 @@ public class {{classname}} extends com.okta.sdk.impl.client.BaseClient implement
 {{#vendorExtensions.isDelete}}
 {{>apiMethodDelete}}
 {{/vendorExtensions.isDelete}}
+    /*{{{vendorExtensions}}}*/
     }
 
 {{#vendorExtensions.hasOptional}}
@@ -119,7 +120,7 @@ public class {{classname}} extends com.okta.sdk.impl.client.BaseClient implement
     @javax.annotation.Generated(
             value    = "{{generatorClass}}",
             date     = "{{generatedDate}}",
-            comments = "{{httpMethod}} - {{path}}")
+            comments = "{{httpMethod}} - {{path}}") /*B*/
     public {{#returnType}}{{{returnType}}} {{/returnType}}{{^returnType}}void {{/returnType}}{{operationId}}({{#vendorExtensions.nonOptionalParams}}{{{dataType}}} {{paramName}}{{^@last}}, {{/@last}}{{/vendorExtensions.nonOptionalParams}}) {
 {{>paramPartialOnlyRequired}}
 {{#vendorExtensions.isGet}}
@@ -158,7 +159,7 @@ public class {{classname}} extends com.okta.sdk.impl.client.BaseClient implement
     @javax.annotation.Generated(
             value    = "{{generatorClass}}",
             date     = "{{generatedDate}}",
-            comments = "{{httpMethod}} - {{path}}")
+            comments = "{{httpMethod}} - {{path}}") /*C*/
     public {{#returnType}}{{{returnType}}} {{/returnType}}{{^returnType}}void {{/returnType}}{{operationId}}({{#value}}{{{dataType}}} {{paramName}}{{^@last}}, {{/@last}}{{/value}}) {
 {{>paramPartialBackwardsCompat}}
 {{#vendorExtensions.isGet}}
